--- a/2DWaterPlane/AndroidManifest.xml
+++ b/2DWaterPlane/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.precisionag.waterplane"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="4"
+    android:versionName="0.4" >
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -33,6 +33,7 @@
             android:name="com.precisionag.waterplane.MainActivity"
             android:label="@string/app_name"
             android:configChanges="keyboardHidden|orientation|screenSize">
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -43,13 +44,27 @@
                 android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="com.filebrowser.DataPathChooser" />
-
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity
+                android:name="com.filebrowser.DataFileChooser"
+                android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="com.filebrowser.DataFileChooser" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+                android:name="com.precisionag.waterplane.SettingsActivity"
+                android:label="@string/menu_settings" >
+        </activity>
         <meta-data
     		android:name="com.google.android.maps.v2.API_KEY"
-    		android:value="AIzaSyBiWShI8WEZZN1L0oXJL_ZfJyWh9y-djp0"/>
+            android:value="AIzaSyBiWShI8WEZZN1L0oXJL_ZfJyWh9y-djp0"/>
     </application>
 
 </manifest>
+
+<!-- debug:   android:value="AIzaSyAJVXs0TbvT7N8FSNO-FlQ-CUshRh-9fAo"
+     release: android:value="AIzaSyBiWShI8WEZZN1L0oXJL_ZfJyWh9y-djp0"  -->
