--- a/2DWaterPlane/AndroidManifest.xml
+++ b/2DWaterPlane/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.precisionag.waterplane"
-    android:versionCode="6"
-    android:versionName="0.6" >
+    android:versionCode="7"
+    android:versionName="0.7" >
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -43,7 +43,7 @@
                 android:name="com.filebrowser.DataPathChooser"
                 android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="com.filebrowser.DataPathChooser" />
+                <action android:name="com.filebrowser.DataPathChooserWaterplane"/>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
@@ -51,7 +51,7 @@
                 android:name="com.filebrowser.DataFileChooser"
                 android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="com.filebrowser.DataFileChooser" />
+                <action android:name="com.filebrowser.DataFileChooserWaterplane"/>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
@@ -69,7 +69,7 @@
         </activity>
         <meta-data
     		android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyBiWShI8WEZZN1L0oXJL_ZfJyWh9y-djp0"/>
+            android:value="AIzaSyAJVXs0TbvT7N8FSNO-FlQ-CUshRh-9fAo"/>
     </application>
 
 </manifest>
