--- a/2DWaterPlane/AndroidManifest.xml
+++ b/2DWaterPlane/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.precisionag.waterplane"
-    android:versionCode="8"
-    android:versionName="0.8" >
+    package="com.waterapps.waterplane"
+    android:versionCode="1"
+    android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -13,9 +13,9 @@
   		android:required="true"/>
     
     <permission
-        android:name="com.precisionag.waterplane.permission.MAPS_RECEIVE"
+        android:name="com.waterapps.waterplane.permission.MAPS_RECEIVE"
         android:protectionLevel="signature"/>
-        <uses-permission android:name="com.precisionag.waterplane.permission.MAPS_RECEIVE"/>
+        <uses-permission android:name="com.waterapps.waterplane.permission.MAPS_RECEIVE"/>
         <uses-permission android:name="android.permission.INTERNET"/>
 		<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 		<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
@@ -30,7 +30,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.precisionag.waterplane.MainActivity"
+            android:name="com.waterapps.waterplane.MainActivity"
             android:label="@string/app_name"
             android:configChanges="keyboardHidden|orientation|screenSize">
             
@@ -56,24 +56,24 @@
             </intent-filter>
         </activity>
         <activity
-                android:name="com.precisionag.waterplane.SettingsActivity"
+                android:name="com.waterapps.waterplane.SettingsActivity"
                 android:label="@string/menu_settings" >
         </activity>
         <activity
-                android:name="com.precisionag.waterplane.IntroActivity"
+                android:name="com.waterapps.waterplane.IntroActivity"
                 android:label="Intro" >
         </activity>
         <activity
-                android:name="com.precisionag.waterplane.HelpActivity"
+                android:name="com.waterapps.waterplane.HelpActivity"
                 android:label="Waterplane Help" >
             <intent-filter>
-                <action android:name="com.precisionag.waterplane.HelpActivity" />
+                <action android:name="com.waterapps.waterplane.HelpActivity" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <meta-data
     		android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyAJVXs0TbvT7N8FSNO-FlQ-CUshRh-9fAo"/>
+            android:value="AIzaSyAY8BOg0EEGKWKw4GacgquGVe6_KY9wjds.."/>
     </application>
 
 </manifest>
