--- a/2DWaterPlane/AndroidManifest.xml
+++ b/2DWaterPlane/AndroidManifest.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.waterapps.waterplane"
-    android:versionCode="10"
-    android:versionName="1.1.2" >
+<manifest package="com.waterapps.waterplane"
+	xmlns:android="http://schemas.android.com/apk/res/android"
+    android:versionCode="12"
+    android:versionName="1.2.0"
+    >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="12"
         android:targetSdkVersion="17" />
     
     <uses-feature
@@ -30,7 +31,8 @@
         android:largeHeap="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
+		
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
         <activity
             android:name="com.waterapps.waterplane.MainActivity"
@@ -76,7 +78,7 @@
         </activity>
         <meta-data
     		android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyBY3jLiH0G3Ec3h_oACjigaHm29z6pOuhw"/>
+            android:value="AIzaSyAY8BOg0EEGKWKw4GacgquGVe6_KY9wjds"/>
     </application>
 
 </manifest>
