--- a/2DWaterPlane/build.gradle
+++ b/2DWaterPlane/build.gradle
@@ -14,12 +14,12 @@ apply plugin: 'android'
 
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
-    compile 'com.google.android.gms:play-services:4.1.32'
+    compile 'com.google.android.gms:play-services:4.1.32+'
 }
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.0.1"
+    buildToolsVersion "19.0.3"
 
 	signingConfigs {
         release {
