--- a/2DWaterPlane/build.gradle
+++ b/2DWaterPlane/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 apply plugin: 'android'
 
 dependencies {
+    compile project(':OpenATKLib')
     compile fileTree(dir: 'libs', include: '*.jar')
     compile 'com.google.android.gms:play-services:4.1.32'
 }
