--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="com.waterapps.waterplane"
 	xmlns:android="http://schemas.android.com/apk/res/android"
-    android:versionCode="17"
-    android:versionName="2.0"
+    android:versionCode="18"
+    android:versionName="2.1"
     >
 
     <uses-sdk
@@ -25,7 +25,6 @@
 		<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 		<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 		
-
     <application
         android:allowBackup="true"
         android:largeHeap="true"
@@ -76,9 +75,14 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+<!--         testing key -->
+<!--         <meta-data -->
+<!--     		android:name="com.google.android.maps.v2.API_KEY" -->
+<!--             android:value="AIzaSyCkPeK2lML2EM5grgYCZMIxpMCwvaGapa8"/> -->
+		<!-- production key -->
         <meta-data
     		android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyCkPeK2lML2EM5grgYCZMIxpMCwvaGapa8"/>
+            android:value="AIzaSyCCEbhlGZxDn1vF2siSlulaQv4AiC51Fak"/>
     </application>
 
 </manifest>
